# solana-trader-client-python

./: .flake8  .gitignore  .pyre_configuration  Makefile  README.md  api_pb2.py  api_pb2_grpc.py  generate-proto.sh  helpers.py  menu.py  pyproject.toml  requirements.txt  sdk.py  setup.cfg
.circleci/: config.yml
aiocmd/: aiocmd.py  nested_completer.py
bxserum/: __init__.py  utils.py
bxserum/proto/: api.py
bxserum/proto/google/: api.py
bxserum/provider/: __init__.py  base.py  constants.py  grpc.py  http.py  http_error.py  request_id.py  stream_manager.py  ws.py  wsrpc.py  wsrpc_error.py
bxserum/test/integration/: grpc_test.py  http_test.py  private.py  public.py  stream.py  test_grpc.py  test_http.py  test_ws.py  ws_test.py
bxserum/test/unit/: test_transaction.py
bxserum/transaction/: __init__.py  deserializer.py  signing.py  signing_test.py
bxsolana/: __init__.py
bxsolana/examples/: __init__.py  constants.py  order_lifecycle.py  order_utils.py  request_utils.py  sandbox_bundles.py  stream_utils.py  transaction_request_utils.py
bxsolana/proto/: api.py
bxsolana/provider/: __init__.py  base.py  constants.py  grpc.py  http.py  http_error.py  jsonrpc_patch.py  package_info.py  ws.py
bxsolana/test/integration/: private.py  public.py
bxsolana/transaction/: __init__.py  memo.py  memo_test.py  private_txs.py  signing.py
bxsolana/utils/: __init__.py  order_lifecycle.py  order_utils.py  request_utils.py  stream_utils.py  transaction_request_utils.py
example/: README.md  main.py  requirements.txt  sdk.py  test_stream_seperation.py
example/bundles/: main.py
example/menu/: menu.py
example/provider/: main.py
example/same_token_arb/: key  main.py
example/samples/: helpers.py
example/transaction/: main.py
example/transaction/ws/: main.py
test/integration/: private.py  public.py  stream.py  test_grpc.py  test_http.py  test_ws.py
test/unit/transaction/: test_memo.py  test_signing.py
test/unit/ws/: test_validation.py
