# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[metadata]
name = bxsolana-trader
version = 1.8.1
description = Python SDK for bloXroute's Solana Trader API
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = bloXroute Labs
author_email = support@bloxroute.com
url = https://github.com/bloXroute-Labs/solana-trader-client-python
keywords = serum, solana, blockchain, trader, grpc, stream
classifiers = Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    aiohttp==3.8.1
    grpclib==0.4.3
    aiounittest==1.4.1
    base58==2.1.1
    solana==0.29.1
    solders==0.14.4
    bx-jsonrpc-py==0.2.0
    bxsolana-trader-proto==0.0.43
